Fix vertical alignment on search bar

--- a/public/css/modules/search-bar.less
+++ b/public/css/modules/search-bar.less
@@ -52,12 +52,14 @@
   .search-input {
     #elements > .textbox();
 
+    vertical-align: middle;
     width: calc(~"100% - 7rem");
   }
 
   .search-button {
     #elements > .button();
 
+    vertical-align: middle;
     width: 6rem;
   }
 
